--- a/angular.json
+++ b/angular.json
@@ -6,12 +6,8 @@
     "wet-automate": {
       "projectType": "application",
       "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
-        }
+        "@schematics/angular:component": { "style": "scss" },
+        "@schematics/angular:application": { "strict": true }
       },
       "root": "",
       "sourceRoot": "src",
@@ -28,11 +24,19 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/gcwet/wet-boew/",
+                "output": "./gcwet/"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/gcwet/GCWeb/",
+                "output": "./gcwet/"
+              }
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -71,20 +75,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
-            "production": {
-              "browserTarget": "wet-automate:build:production"
-            },
-            "development": {
-              "browserTarget": "wet-automate:build:development"
-            }
+            "production": { "browserTarget": "wet-automate:build:production" },
+            "development": { "browserTarget": "wet-automate:build:development" }
           },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "wet-automate:build"
-          }
+          "options": { "browserTarget": "wet-automate:build" }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -94,13 +92,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
