--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "wet-automate",
   "version": "0.0.0",
+  "wet-version": "13.4.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "node wet-automate.js"
   },
   "private": true,
   "dependencies": {
